--- a/materials.html
+++ b/materials.html
@@ -60,12 +60,11 @@
                
                     <h1>Research Materials and Presentations </h1>
         <ul>
+		<li> Introductory Mathematical Programming for EC (GECCO'21 tutorial; Lille FRANCE, July 2021) <a href="https://doi.org/10.1145/3449726.3461409" target="_new">ACM/dL</a></li>
+		<li> Sequential Experimentation by Evolutionary Algorithms (GECCO'21 joint tutorial with Thomas B&auml;ck; Lille FRANCE, July 2021) <a href="https://doi.org/10.1145/3449726.3461410" target="_new">ACM/dL</a></li>
 		<li> Assaf Israeli, Multiobjective Optimization of Soil Sampling Design Using Information Metrics. MSc Thesis Tel-Hai College (joint supervision with Iggy Litaor, 2020): <a href="AssafIsraeli_MScDissertation_web.pdf" target="_new">dissertation for download</a></li>
 		<li> Chen Erlich, Experimental Combinatorial Optimization of Phycobiliproteins' Expression in E.coli. MSc Thesis Tel-Hai College (joint supervision with Dror Noy, 2019): <a href="ChenErlich_MScDissertation_web.pdf" target="_new">dissertation for download</a></li>
-	<li> Mathematical Programming as a Complement to Bio-Inspired Optimization (PPSN'18 tutorial; Coimbra PORTUGAL, September 2018) <a href="IntroMathProg4EC_ppsn2018_ShirOM.pdf" target="_new">pdf</a></li>
 	<li> On the Covariance-Hessian Relation in Evolution Strategies (arXiv preprint with Amir Yehudayoff) <a href="https://arxiv.org/abs/1806.03674" target="_new">pdf</a></li>
-	<li> Introductory mathematical programming for EC (GECCO'18 tutorial; Kyoto JAPAN, July 2018) <a href="https://dl.acm.org/citation.cfm?id=3207871" target="_new">ACM/dL</a> </li>
-	<li> Sequential experimentation by evolutionary algorithms (GECCO'18 joint tutorial with Thomas B&auml;ck; Kyoto JAPAN, July 2018) <a href="https://dl.acm.org/citation.cfm?id=3207885" target="_new">ACM/dL</a></li>  
 	<li> On the Statistical Learning Ability of Evolution Strategies (Foundations of Genetic Algorithms Workshop FOGA-XIV, January 2017) <a href="Shir-Yehudayoff_FOGA2017copenhagen15012017.pdf" target="_new">pdf</a></li>
       <li> Computational Intelligence in the Natural Sciences: Machine Learning, Optimization, and Heuristic Search (Princeton University Seminar, July 2016) <a href="Shir_PrincetonColloquium-July2016.pdf" target="_new">pdf</a></li>
 	  <li> Pareto Automated Recommendation (LIACS Colloquium, Dec. 2014) <a href="MORecommendation.pdf" target="_new">pdf</a></li>
