--- a/publications.html
+++ b/publications.html
@@ -55,6 +55,7 @@
             </ol>
                 <h1>Journal Articles</h1>
 				<ol start="5" type="1">
+<li>Shir, O.M., Xi, X., Rabitz, H.: Multi-level evolution strategies for high-resolution black-box control. Journal of Heuristics (2021) <a href="https://doi.org/10.1007/s10732-021-09483-z" target="_new">online</a></li>
 <li>Shir, O.M., Yehudayoff, A.: On the covariance-Hessian relation in evolution strategies. Theoretical Computer Science <strong> 801</strong> (2020) 157&mdash;174 <a href="https://doi.org/10.1016/j.tcs.2019.09.002" target="_new">online</a></li>
 <li>Liran, O., Shir, O.M., Levy, S., Grunfeld, A., Shelly, Y.: Novel Remote Sensing Index of Electron Transport Rate Predicts Primary Production and Crop Health in L. sativa and Z. mays. Remote Sensing <strong> 12 </strong> (2020) 1718 <a href="https://www.mdpi.com/2072-4292/12/11/1718" target="_new">online</a></li>
 <li> Doerr, C., Ye, F., Horesh, N., Wang, H., Shir, O.M., B&auml;ck, T.: Benchmarking Discrete Optimization Heuristics with IOHprofiler. Applied Soft Computing (2019) <a href="https://doi.org/10.1016/j.asoc.2019.106027" target="_new">online</a></li>
@@ -80,9 +81,9 @@ Comb Chem High Throughput Screen <strong>19</strong>(1) (2016) 4&mdash;13   </li
               <li>Siedschlag, C., Shir, O.M., B&auml;ck, T., Vrakking, M.J.J.: Evolutionary Algorithms in the Optimization of Dynamic Molecular Alignment. Optics Communications <strong>264</strong> (2006) 511&ndash;518  </li>
             </ol>
 				<h1>Peer-Reviewed Conference Proceedings</h1>
-                <ol start="27" type="1">
-<li> Yazmir, B., Shir, O.M.: Automated Feature Detection of Black-Box Continuous Search-Landscapes using Neural Image Recognition. To Appear In: Proceedings of the Genetic and Evolutionary Computation Conference Companion, GECCO-2021, New York, NY, USA, ACM Press (2021).  </li>
-<li> Kononova, A.V., Shir, O.M., Tukker, T., Frisco, P., Zeng, S., B&auml;ck, T.: Addressing the Multiplicity of Solutions in Optical Lens Design as a Niching Evolutionary Algorithms Computational Challenge. To Appear In: Proceedings of the Genetic and Evolutionary Computation Conference Companion, GECCO-2021, New York, NY, USA, ACM Press (2021).  </li>
+                <ol start="28" type="1">
+<li> Yazmir, B., Shir, O.M.: Automated Feature Detection of Black-Box Continuous Search-Landscapes using Neural Image Recognition. In: Proceedings of the Genetic and Evolutionary Computation Conference Companion, GECCO-2021, New York, NY, USA, ACM Press (2021) 213&ndash;214 <a href="https://doi.org/10.1145/3449726.3459439" target="_new">dl/acm</a> </li>
+<li> Kononova, A.V., Shir, O.M., Tukker, T., Frisco, P., Zeng, S., B&auml;ck, T.: Addressing the Multiplicity of Solutions in Optical Lens Design as a Niching Evolutionary Algorithms Computational Challenge. In: Proceedings of the Genetic and Evolutionary Computation Conference Companion, GECCO-2021, New York, NY, USA, ACM Press (2021) 1596&ndash;1604 <a href="https://doi.org/10.1145/3449726.3463209" target="_new">dl/acm</a> </li>  </li>
 <li> Kocaman, V., Shir, O.M., B&auml;ck, T.: Improving Model Accuracy for Imbalanced Image Classification Tasks by Adding a Final Batch Normalization Layer: An Empirical Study. In: Proceedings of the 25th International Conference on Pattern Recognition, ICPR2020 (2021) 10404&ndash;10411 </li>
 <li> Horesh, N., B&auml;ck, T., Shir, O.M.: Predict or Screen Your Expensive Assay? DoE vs. Surrogates in Experimental Combinatorial Optimization. In: Proceedings of the Genetic and Evolutionary Computation Conference, GECCO-2019, New York, NY, USA, ACM Press (2019) 274&ndash;284  <a href="https://dl.acm.org/citation.cfm?id=3321801" target="_new">dl/acm</a> </li>
 <li> Israeli, A., Emmerich, M., Litaor, M., Shir, O.M.: Statistical Learning in Soil Sampling Design Aided by Pareto Optimization. In: Proceedings of the Genetic and Evolutionary Computation Conference, GECCO-2019, New York, NY, USA, ACM Press (2019) 1198&ndash;1205 <a href="https://dl.acm.org/citation.cfm?id=3321707.3321809" target="_new">dl/acm</a> </li>
