October minor updates
J Heur fix
WOROM ref
GECCO22 ENUM ref

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@ Specifically, my fields of interest encompass Statistical Learning in Theory and
               <li> The C++ Programming Language (121503; Fall)</li>
               <li> Introduction to Computational Intelligence (199811; Fall)</li>
 	      <li> Advanced Topics in Object-Oriented Programming (199414; Spring)</li>
+		  <li> Workshop on Operations Research and Optimization Methods (199833; Spring) </li>
       </ul><br>
 	  <b> Algorithmically-Guided Scientific Discoveries (Migal's Talk, 2021):</b>
 	  <br>
@@ -120,7 +121,7 @@ Specifically, my fields of interest encompass Statistical Learning in Theory and
 	
 		<div class="col float-left">
 		<p>
-		&copy; copyright 2020 <strong>CS Tel-Hai College</strong><br /> 
+		&copy; copyright 2021 <strong>CS Tel-Hai College</strong><br /> 
 		Design by: <a href="index.html"><strong>styleshout</strong></a> &nbsp; &nbsp;
 		Valid <a href="http://jigsaw.w3.org/css-validator/check/referer"><strong>CSS</strong></a>  
 		</p>
