--- a/publications.html
+++ b/publications.html
@@ -55,7 +55,7 @@
             </ol>
                 <h1>Journal Articles</h1>
 				<ol start="5" type="1">
-<li>Shir, O.M., Xi, X., Rabitz, H.: Multi-level evolution strategies for high-resolution black-box control. Journal of Heuristics (2021) <a href="https://doi.org/10.1007/s10732-021-09483-z" target="_new">online</a></li>
+<li>Shir, O.M., Xi, X., Rabitz, H.: Multi-level evolution strategies for high-resolution black-box control. Journal of Heuristics <strong>27</strong>(6) (2021) 1021&mdash;1055 <a href="https://doi.org/10.1007/s10732-021-09483-z" target="_new">online</a></li>
 <li>Shir, O.M., Yehudayoff, A.: On the covariance-Hessian relation in evolution strategies. Theoretical Computer Science <strong> 801</strong> (2020) 157&mdash;174 <a href="https://doi.org/10.1016/j.tcs.2019.09.002" target="_new">online</a></li>
 <li>Liran, O., Shir, O.M., Levy, S., Grunfeld, A., Shelly, Y.: Novel Remote Sensing Index of Electron Transport Rate Predicts Primary Production and Crop Health in L. sativa and Z. mays. Remote Sensing <strong> 12 </strong> (2020) 1718 <a href="https://www.mdpi.com/2072-4292/12/11/1718" target="_new">online</a></li>
 <li> Doerr, C., Ye, F., Horesh, N., Wang, H., Shir, O.M., B&auml;ck, T.: Benchmarking Discrete Optimization Heuristics with IOHprofiler. Applied Soft Computing (2019) <a href="https://doi.org/10.1016/j.asoc.2019.106027" target="_new">online</a></li>
@@ -82,7 +82,7 @@ Comb Chem High Throughput Screen <strong>19</strong>(1) (2016) 4&mdash;13   </li
             </ol>
 				<h1>Peer-Reviewed Conference Proceedings</h1>
                 <ol start="28" type="1">
-<li> Kocaman, V., Shir, O.M., B&auml;ck, T.: The Unreasonable Effectiveness of the Final Batch Normalization Layer. In: Proceedings of the 16th International Symposium on Visual Computing, ISVC'21 (2021) To Appear </li>
+<li> Kocaman, V., Shir, O.M., B&auml;ck, T.: The Unreasonable Effectiveness of the Final Batch Normalization Layer. In: Proceedings of the 16th International Symposium on Visual Computing, ISVC'21 (2021) </li>
 <li> Kononova, A.V., Shir, O.M., Tukker, T., Frisco, P., Zeng, S., B&auml;ck, T.: Locating the local minima in lens design with machine learning. In: Proceedings of SPIE 11814, Current Developments in Lens Design and Optical Engineering XXII, 1181402 (1 August 2021) <a href="http://dx.doi.org/10.1117/12.2593199" target="_new">doi</a> </li> 
 <li> Yazmir, B., Shir, O.M.: Automated Feature Detection of Black-Box Continuous Search-Landscapes using Neural Image Recognition. In: Proceedings of the Genetic and Evolutionary Computation Conference Companion, GECCO-2021, New York, NY, USA, ACM Press (2021) 213&ndash;214 <a href="https://doi.org/10.1145/3449726.3459439" target="_new">dl/acm</a> </li>
 <li> Kononova, A.V., Shir, O.M., Tukker, T., Frisco, P., Zeng, S., B&auml;ck, T.: Addressing the Multiplicity of Solutions in Optical Lens Design as a Niching Evolutionary Algorithms Computational Challenge. In: Proceedings of the Genetic and Evolutionary Computation Conference Companion, GECCO-2021, New York, NY, USA, ACM Press (2021) 1596&ndash;1604 <a href="https://doi.org/10.1145/3449726.3463209" target="_new">dl/acm</a> </li>  </li>
@@ -164,7 +164,7 @@ Comb Chem High Throughput Screen <strong>19</strong>(1) (2016) 4&mdash;13   </li
 
             <div class="col float-left">
             <p>
-            &copy; copyright 2020 <strong>CS Tel-Hai College</strong><br /> 
+            &copy; copyright 2021 <strong>CS Tel-Hai College</strong><br /> 
             Design by: <a href="index.html"><strong>styleshout</strong></a> &nbsp; &nbsp;
             Valid <a href="http://jigsaw.w3.org/css-validator/check/referer"><strong>CSS</strong></a>  
             </p>
