--- a/materials.html
+++ b/materials.html
@@ -64,6 +64,7 @@
 		<li> Sequential Experimentation by Evolutionary Algorithms (GECCO'21 joint tutorial with Thomas B&auml;ck; Lille FRANCE, July 2021) <a href="https://doi.org/10.1145/3449726.3461410" target="_new">ACM/dL</a></li>
 		<li> Assaf Israeli, Multiobjective Optimization of Soil Sampling Design Using Information Metrics. MSc Thesis Tel-Hai College (joint supervision with Iggy Litaor, 2020): <a href="AssafIsraeli_MScDissertation_web.pdf" target="_new">dissertation for download</a></li>
 		<li> Chen Erlich, Experimental Combinatorial Optimization of Phycobiliproteins' Expression in E.coli. MSc Thesis Tel-Hai College (joint supervision with Dror Noy, 2019): <a href="ChenErlich_MScDissertation_web.pdf" target="_new">dissertation for download</a></li>
+	<li> Fundamentals of ESs' Statistical Learning (Dagstuhl Seminar on Theory of Randomized Optimization Heuristics, 17191, May 2017) <a href="dagstuhl17191_ShirOM.pdf" target="_new">pdf</a></li>
 	<li> On the Covariance-Hessian Relation in Evolution Strategies (arXiv preprint with Amir Yehudayoff) <a href="https://arxiv.org/abs/1806.03674" target="_new">pdf</a></li>
 	<li> On the Statistical Learning Ability of Evolution Strategies (Foundations of Genetic Algorithms Workshop FOGA-XIV, January 2017) <a href="Shir-Yehudayoff_FOGA2017copenhagen15012017.pdf" target="_new">pdf</a></li>
       <li> Computational Intelligence in the Natural Sciences: Machine Learning, Optimization, and Heuristic Search (Princeton University Seminar, July 2016) <a href="Shir_PrincetonColloquium-July2016.pdf" target="_new">pdf</a></li>
