--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	</div>
 		<div id="main">		
 	                <p>I am interested in learning and optimization questions related to systems within the Natural Sciences. 
-Specifically, my fields of interest encompass Statistical Learning in Theory and in Practice, Experimental Optimization, Theory of Randomized Search Heuristics, Scientific Informatics, Natural Computing, Computational Intelligence in Physical Sciences, Quantum Control and Quantum Machine Learning. <br><br>
+Specifically, my fields of interest encompass Statistical Learning within Optimization and Deep Learning in Practice, Self-Supervised Learning, Algorithmically-Guided Experimentation, Combinatorial Optimization and Benchmarking (White/Grey/Black-Box), Quantum Control and Quantum Machine Learning. <br><br>
             <b>Currently:</b> <br>
             Head, <strong><a href="https://english.telhai.ac.il/" target="_new">Computer Science Department, Tel-Hai College</a></strong>.<br>
             Principal Investigator, Computational Intelligence Group, <strong><a href="https://www.migal.org.il/en/computational-intelligence" target="_new">Migal-The Galilee Research Institute</a></strong>.
@@ -120,7 +120,7 @@ Specifically, my fields of interest encompass Statistical Learning in Theory and
 	
 		<div class="col float-left">
 		<p>
-		&copy; copyright 2021 <strong>CS Tel-Hai College</strong><br /> 
+		&copy; copyright 2022 <strong>CS Tel-Hai College</strong><br /> 
 		Design by: <a href="index.html"><strong>styleshout</strong></a> &nbsp; &nbsp;
 		Valid <a href="http://jigsaw.w3.org/css-validator/check/referer"><strong>CSS</strong></a>  
 		</p>
