--- a/materials.html
+++ b/materials.html
@@ -60,6 +60,8 @@
                
                     <h1>Research Materials and Presentations </h1>
         <ul>
+		<li> GWANN: Implementing deep learning in genome wide association studies (bioRxiv preprint Nimrod Ashkenazy, Martin Feder, and Sariel Hubner) <a href="https://www.biorxiv.org/content/10.1101/2022.06.01.494275v1?rss=1" target="_new">pdf</a> </li>
+		<li> Ido Dan, Developing models for soil texture classification from ancillary data using machine learning. MSc Thesis Tel-Hai College (joint supervision with Iggy Litaor, 2020): <a href="IdoDan_MScDissertation_web.pdf" target="_new">dissertation for download</a></li>
 		<li> Introductory Mathematical Programming for EC (GECCO'21 tutorial; Lille FRANCE, July 2021) <a href="https://doi.org/10.1145/3449726.3461409" target="_new">ACM/dL</a></li>
 		<li> Sequential Experimentation by Evolutionary Algorithms (GECCO'21 joint tutorial with Thomas B&auml;ck; Lille FRANCE, July 2021) <a href="https://doi.org/10.1145/3449726.3461410" target="_new">ACM/dL</a></li>
 		<li> Assaf Israeli, Multiobjective Optimization of Soil Sampling Design Using Information Metrics. MSc Thesis Tel-Hai College (joint supervision with Iggy Litaor, 2020): <a href="AssafIsraeli_MScDissertation_web.pdf" target="_new">dissertation for download</a></li>
@@ -100,7 +102,7 @@
 
             <div class="col float-left">
             <p>
-            &copy; copyright 2021 <strong>CS Tel-Hai College</strong><br /> 
+            &copy; copyright 2022 <strong>CS Tel-Hai College</strong><br /> 
             Design by: <a href="index.html"><strong>styleshout</strong></a> &nbsp; &nbsp;
             Valid <a href="http://jigsaw.w3.org/css-validator/check/referer"><strong>CSS</strong></a>  
             </p>
