--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<!-- content-wrap starts here -->
 	<div id="content-wrap"><div id="content">		
 	<!--div class="headerphoto"></div-->
-		<img src="./images/headerphoto.JPG" width=520px alt="Prof. Ofer M. Shir">
+		<img src="./images/header21.JPG" width=520px alt="Prof. Ofer M. Shir">
 			
 		<!--div style="clear:both;"></div-->
         <div id="sidebar" >
@@ -63,17 +63,17 @@
 	</div>
 		<div id="main">		
 	                <p>I am interested in learning and optimization questions related to systems within the Natural Sciences. 
-Specifically, my fields of interest encompass Statistical Learning within Optimization and Deep Learning in Practice, Self-Supervised Learning, Algorithmically-Guided Experimentation, Combinatorial Optimization and Benchmarking (White/Grey/Black-Box), Quantum Control and Quantum Machine Learning. <br><br>
+Specifically, my fields of interest encompass Statistical Learning within Optimization and Deep Learning in Practice, Self-Supervised Learning, Algorithmically-Guided Experimentation, Combinatorial Optimization and Benchmarking (White/Gray/Black-Box), Quantum Optimization and Quantum Machine Learning. <br><br>
             <b>Currently:</b> <br>
             Head, <strong><a href="https://english.telhai.ac.il/" target="_new">Computer Science Department, Tel-Hai College</a></strong>.<br>
             Principal Investigator, Computational Intelligence Group, <strong><a href="https://www.migal.org.il/en/computational-intelligence" target="_new">Migal-The Galilee Research Institute</a></strong>.
                         <br><br>
 		<b> Previously: </b>
 <ul>
-        <li> <span style="font-family:'Arial','sans-serif'; font-size: 10px">Senior Lecturer, <strong><a href="http://english.telhai.ac.il/" target="_new">Computer Science Department, Tel-Hai College</a></strong>.</span></li>
-	<li> <span style="font-family:'Arial','sans-serif'; font-size: 10px">Research Scientist, <strong><a href="http://www.research.ibm.com/" target="_new">IBM-Research</a></strong>.</span></li>
-        <li> <span style="font-family:'Arial','sans-serif'; font-size: 10px">Postdoctoral Research Associate, <strong><a href="http://www.princeton.edu/" target="_new">Princeton University</a></strong>. Host: <a href="https://www.princeton.edu/chemistry/rabitz/" target="_new">Hersch Rabitz</a>.</span></li>
-        <li> <span style="font-family:'Arial','sans-serif'; font-size: 10px">MSc and PhD in Computer Science, <strong><a href="http://www.leiden.edu/" target="_new">Leiden University</a></strong>. Advisors: <a href="http://natcomp.liacs.nl/" target="_new">Thomas B&auml;ck</a> and <a href="http://staff.mbi-berlin.de/vrakking/" target="_new">Marc Vrakking</a>.</span></li>
+        <li> <span style="font-family:'Arial','sans-serif'; font-size: 10px">Senior Lecturer, <strong><a href="https://english.telhai.ac.il/" target="_new">Computer Science Department, Tel-Hai College</a></strong>.</span></li>
+	<li> <span style="font-family:'Arial','sans-serif'; font-size: 10px">Research Scientist, <strong><a href="https://www.research.ibm.com/" target="_new">IBM-Research</a></strong>.</span></li>
+        <li> <span style="font-family:'Arial','sans-serif'; font-size: 10px">Postdoctoral Research Associate, <strong><a href="https://www.princeton.edu/" target="_new">Princeton University</a></strong>. Host: <a href="https://www.princeton.edu/chemistry/rabitz/" target="_new">Hersch Rabitz</a>.</span></li>
+        <li> <span style="font-family:'Arial','sans-serif'; font-size: 10px">MSc and PhD in Computer Science, <strong><a href="https://www.leiden.edu/" target="_new">Leiden University</a></strong>. Advisors: <a href="https://natcomp.liacs.nl/" target="_new">Thomas B&auml;ck</a> and <a href="https://staff.mbi-berlin.de/vrakking/" target="_new">Marc Vrakking</a>.</span></li>
         <li> <span style="font-family:'Arial','sans-serif'; font-size: 10px"> BSc in Physics and Computer Science, <strong><a href="https://new.huji.ac.il/" target="_new">Hebrew University of Jerusalem</a></strong>.</span></li>
       </ul> <br>
             <b>Teaching</b>:
@@ -97,14 +97,14 @@ Specifically, my fields of interest encompass Statistical Learning within Optimi
 	<b> Recent meetings</b>:
 	<br><br>
 	    <div id="content-wrap"><div id="content">
-		<p> GECCO'18 Kyoto, July 2018 &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp;&emsp; &emsp; CA15140, Potsdam, March 2018 <br>	
-                <a href="./images/gecco2018.JPG" target="_new"><img src="./images/gecco2018.JPG" width=281px alt="GECCO-2018"></a>
-		<a href="./images/PotsdamGroup.jpg" target="_new"><img src="./images/Potsdam_small.jpg" width=281px alt="15140-March2018"></a>
+		<p> GECCO'22 Boston MA, USA, July 2022 &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp;&emsp; &emsp; GECCO'21 VIRTUAL Lille, France, July 2021 <br>	
+                <a href="./images/gecco2022.jpg" target="_new"><img src="./images/gecco2022.jpg" width=281px alt="GECCO-2022"></a>
+				<a href="./images/gecco2021.png" target="_new"><img src="./images/gecco2021.png" width=281px alt="GECCO-2021"></a>
                 </p>
-		<p> Dagstuhl 17191 Seminar, May 2017 &emsp; &emsp; &emsp; &emsp; &emsp; &emsp;&emsp; &emsp; FOGA, January 2017 <br> 
+		<!--p> Dagstuhl 17191 Seminar, May 2017 &emsp; &emsp; &emsp; &emsp; &emsp; &emsp;&emsp; &emsp; FOGA, January 2017 <br> 
 		<a href="./images/17191.jpg" target="_new"><img src="./images/17191_small.gif" width=226px alt="Dagstuhl-17191"></a>
                 <a href="./images/groupFOGA2017.jpg" target="_new"><img src="./images/groupFOGA2017_small.gif" width=290px alt="FOGA-2017"></a>
-                </p>
+                </p-->
 
 		</div>
 										
@@ -120,7 +120,7 @@ Specifically, my fields of interest encompass Statistical Learning within Optimi
 	
 		<div class="col float-left">
 		<p>
-		&copy; copyright 2022 <strong>CS Tel-Hai College</strong><br /> 
+		&copy; copyright 2022 <strong>Ofer Shir</strong><br /> 
 		Design by: <a href="index.html"><strong>styleshout</strong></a> &nbsp; &nbsp;
 		Valid <a href="http://jigsaw.w3.org/css-validator/check/referer"><strong>CSS</strong></a>  
 		</p>
