--- a/materials.html
+++ b/materials.html
@@ -61,10 +61,10 @@
                     <h1>Research Materials and Presentations </h1>
         <ul>
 		<li> GWANN: Implementing deep learning in genome wide association studies (bioRxiv preprint with Nimrod Ashkenazy, Martin Feder, and Sariel Hubner) <a href="https://www.biorxiv.org/content/10.1101/2022.06.01.494275v1?rss=1" target="_new">bioRxiv</a> </li>
+		<li> Introductory Mathematical Programming for EC (GECCO'22 tutorial; Boston MA, USA, July 2022) <a href="IntroMathProg4EC_gecco2022_ShirOM.pdf" target="_new">pdf</a></li>
+		<li> Sequential Experimentation by Evolutionary Algorithms (GECCO'22 joint tutorial with Thomas B&auml;ck; Boston MA, USA, July 2022) <a href="https://doi.org/10.1145/3520304.3533631" target="_new">ACM/dL</a></li>
 		<li> Toward an ImageNet Library of Functions for Global Optimization Benchmarking (arXiv preprint with Boris Yazmir) <a href="https://arxiv.org/abs/2206.13630" target="_new">arXiv</a> </li>
 		<li> Ido Dan, Developing models for soil texture classification from ancillary data using machine learning. MSc Thesis Tel-Hai College (joint supervision with Iggy Litaor, 2022): <a href="IdoDan_MScDissertation_web.pdf" target="_new">dissertation for download</a></li>
-		<li> Introductory Mathematical Programming for EC (GECCO'21 tutorial; Lille FRANCE, July 2021) <a href="https://doi.org/10.1145/3449726.3461409" target="_new">ACM/dL</a></li>
-		<li> Sequential Experimentation by Evolutionary Algorithms (GECCO'21 joint tutorial with Thomas B&auml;ck; Lille FRANCE, July 2021) <a href="https://doi.org/10.1145/3449726.3461410" target="_new">ACM/dL</a></li>
 		<li> Assaf Israeli, Multiobjective Optimization of Soil Sampling Design Using Information Metrics. MSc Thesis Tel-Hai College (joint supervision with Iggy Litaor, 2020): <a href="AssafIsraeli_MScDissertation_web.pdf" target="_new">dissertation for download</a></li>
 		<li> Chen Erlich, Experimental Combinatorial Optimization of Phycobiliproteins' Expression in E.coli. MSc Thesis Tel-Hai College (joint supervision with Dror Noy, 2019): <a href="ChenErlich_MScDissertation_web.pdf" target="_new">dissertation for download</a></li>
 	<li> Fundamentals of ESs' Statistical Learning (Dagstuhl Seminar on Theory of Randomized Optimization Heuristics, 17191, May 2017) <a href="dagstuhl17191_ShirOM.pdf" target="_new">pdf</a></li>
@@ -78,7 +78,7 @@
             <h1>Links</h1>
                 <ul>
 				<li> <a href="https://emo2023.liacs.leidenuniv.nl/" target="_new">EMO 2023: Evolutionary Multi-Criterion Optimization</a> ,Leiden University, March 2023; <a href="https://emo2023.liacs.leidenuniv.nl/tutorials/" target="_new">Call for Tutorials</a></li>
-				<li> <a href="https://gecco-2022.sigevo.org/HomePage" target="_new">GECCO 2022: The Genetic and Evolutionary Computation Conference</a> ,Boston MA, USA, July 2022; <a href="https://gecco-2022.sigevo.org/Tracks#ENUM%20-%20Evolutionary%20Numerical%20Optimization" target="_new">ENUM Track</a></li>
+				<li> <a href="https://gecco-2022.sigevo.org/HomePage" target="_new">GECCO 2022: The Genetic and Evolutionary Computation Conference</a> ,Boston MA, USA, July 2022; <a href="https://gecco-2022.sigevo.org/Tracks#ENUM%20-%20Evolutionary%20Numerical%20Optimization" target="_new">ENUM Track</a>; <a href="https://gecco-2022.sigevo.org/Workshops#QuantOpt" target="_new">Quantum Optimization Workshop</a></li>
 				<li> <a href="https://ppsn2020.liacs.leidenuniv.nl/" target="_new">PPSN 2020: 16th Int'l Conference on Parallel Problem Solving from Nature</a> ,Leiden University, September 2020; <a href="PPSN2020-flyer.pdf" target="_new">CFP flyer</a></li>
 				<li> IOHprofiler: Iterative Optimization Heuristics Profiler: <a href="http://iohprofiler.liacs.nl/" target="_new"> web tool</a>, <a href="https://github.com/IOHprofiler" target="_new"> GitHub</a>, <a href="IOHprofiler-flyer.pdf" target="_new">flyer</a> </li>
 		<li> <a href="http://www.dagstuhl.de/17191" target="_new">Dagstuhl Seminar on Theory of Randomized Optimization Heuristics</a> (17191, May 2017)</li>
@@ -104,7 +104,7 @@
 
             <div class="col float-left">
             <p>
-            &copy; copyright 2022 <strong>CS Tel-Hai College</strong><br /> 
+            &copy; copyright 2022 <strong>Ofer Shir</strong><br /> 
             Design by: <a href="index.html"><strong>styleshout</strong></a> &nbsp; &nbsp;
             Valid <a href="http://jigsaw.w3.org/css-validator/check/referer"><strong>CSS</strong></a>  
             </p>
