--- a/publications.html
+++ b/publications.html
@@ -82,7 +82,7 @@ Comb Chem High Throughput Screen <strong>19</strong>(1) (2016) 4&mdash;13   </li
             </ol>
 				<h1>Peer-Reviewed Conference Proceedings</h1>
                 <ol start="28" type="1">
-<li> Shir, O.M., Yazmir, B., Israeli, A., Gamrasni, D.: Algorithmically-Guided Postharvest by Experimental Combinatorial Optimization. In: Proceedings of the Genetic and Evolutionary Computation Conference Companion, GECCO-2022, New York, NY, USA, ACM Press (2022) TO APPEAR </li>
+<li> Shir, O.M., Yazmir, B., Israeli, A., Gamrasni, D.: Algorithmically-Guided Postharvest by Experimental Combinatorial Optimization. In: Proceedings of the Genetic and Evolutionary Computation Conference Companion, GECCO-2022, New York, NY, USA, ACM Press (2022) 2027&ndash;2035 <a href="https://doi.org/10.1145/3520304.3533976" target="_new">dl/acm</a> </li>
 <li> Kocaman, V., Shir, O.M., B&auml;ck, T.: The Unreasonable Effectiveness of the Final Batch Normalization Layer. In: Proceedings of the 16th International Symposium on Visual Computing, ISVC'21 (2021) </li>
 <li> Kononova, A.V., Shir, O.M., Tukker, T., Frisco, P., Zeng, S., B&auml;ck, T.: Locating the local minima in lens design with machine learning. In: Proceedings of SPIE 11814, Current Developments in Lens Design and Optical Engineering XXII, 1181402 (1 August 2021) <a href="http://dx.doi.org/10.1117/12.2593199" target="_new">doi</a> </li> 
 <li> Yazmir, B., Shir, O.M.: Automated Feature Detection of Black-Box Continuous Search-Landscapes using Neural Image Recognition. In: Proceedings of the Genetic and Evolutionary Computation Conference Companion, GECCO-2021, New York, NY, USA, ACM Press (2021) 213&ndash;214 <a href="https://doi.org/10.1145/3449726.3459439" target="_new">dl/acm</a> </li>
@@ -165,7 +165,7 @@ Comb Chem High Throughput Screen <strong>19</strong>(1) (2016) 4&mdash;13   </li
 
             <div class="col float-left">
             <p>
-            &copy; copyright 2022 <strong>CS Tel-Hai College</strong><br /> 
+            &copy; copyright 2022 <strong>Ofer Shir</strong><br /> 
             Design by: <a href="index.html"><strong>styleshout</strong></a> &nbsp; &nbsp;
             Valid <a href="http://jigsaw.w3.org/css-validator/check/referer"><strong>CSS</strong></a>  
             </p>
