--- a/materials.html
+++ b/materials.html
@@ -63,6 +63,7 @@
 		<li> GWANN: Implementing deep learning in genome wide association studies (bioRxiv preprint with Nimrod Ashkenazy, Martin Feder, and Sariel Hubner) <a href="https://www.biorxiv.org/content/10.1101/2022.06.01.494275v1?rss=1" target="_new">bioRxiv</a> </li>
 		<li> Introductory Mathematical Programming for EC (GECCO'22 tutorial; Boston MA, USA, July 2022) <a href="IntroMathProg4EC_gecco2022_ShirOM.pdf" target="_new">pdf</a></li>
 		<li> Sequential Experimentation by Evolutionary Algorithms (GECCO'22 joint tutorial with Thomas B&auml;ck; Boston MA, USA, July 2022) <a href="https://doi.org/10.1145/3520304.3533631" target="_new">ACM/dL</a></li>
+		<li> Algorithmically-Guided Postharvest by Experimental Combinatorial Optimization (GECCO'22 Presentation, July 2022) <a href="gecco2022_ShirOM.pdf" target="_new">pdf</a></li>
 		<li> Toward an ImageNet Library of Functions for Global Optimization Benchmarking (arXiv preprint with Boris Yazmir) <a href="https://arxiv.org/abs/2206.13630" target="_new">arXiv</a> </li>
 		<li> Ido Dan, Developing models for soil texture classification from ancillary data using machine learning. MSc Thesis Tel-Hai College (joint supervision with Iggy Litaor, 2022): <a href="IdoDan_MScDissertation_web.pdf" target="_new">dissertation for download</a></li>
 		<li> Assaf Israeli, Multiobjective Optimization of Soil Sampling Design Using Information Metrics. MSc Thesis Tel-Hai College (joint supervision with Iggy Litaor, 2020): <a href="AssafIsraeli_MScDissertation_web.pdf" target="_new">dissertation for download</a></li>
