--- a/publications.html
+++ b/publications.html
@@ -55,6 +55,7 @@
             </ol>
                 <h1>Journal Articles</h1>
 				<ol start="5" type="1">
+<li>Shir, O.M., Israeli, A., Caftory, A., Zepko, G., Bloch, I.: Algorithmically-guided discovery of viral epitopes via linguistic parsing: Problem formulation and solving by soft computing. Applied Soft Computing <strong>129</strong> (2022) 109509 <a href="https://authors.elsevier.com/a/1fg605aecSnjh4" target="_new">online</a></li>
 <li>Shir, O.M., Xi, X., Rabitz, H.: Multi-level evolution strategies for high-resolution black-box control. Journal of Heuristics <strong>27</strong>(6) (2021) 1021&mdash;1055 <a href="https://doi.org/10.1007/s10732-021-09483-z" target="_new">online</a></li>
 <li>Shir, O.M., Yehudayoff, A.: On the covariance-Hessian relation in evolution strategies. Theoretical Computer Science <strong> 801</strong> (2020) 157&mdash;174 <a href="https://doi.org/10.1016/j.tcs.2019.09.002" target="_new">online</a></li>
 <li>Liran, O., Shir, O.M., Levy, S., Grunfeld, A., Shelly, Y.: Novel Remote Sensing Index of Electron Transport Rate Predicts Primary Production and Crop Health in L. sativa and Z. mays. Remote Sensing <strong> 12 </strong> (2020) 1718 <a href="https://www.mdpi.com/2072-4292/12/11/1718" target="_new">online</a></li>
@@ -81,7 +82,7 @@ Comb Chem High Throughput Screen <strong>19</strong>(1) (2016) 4&mdash;13   </li
               <li>Siedschlag, C., Shir, O.M., B&auml;ck, T., Vrakking, M.J.J.: Evolutionary Algorithms in the Optimization of Dynamic Molecular Alignment. Optics Communications <strong>264</strong> (2006) 511&ndash;518  </li>
             </ol>
 				<h1>Peer-Reviewed Conference Proceedings</h1>
-                <ol start="28" type="1">
+                <ol start="29" type="1">
 <li> Shir, O.M., Yazmir, B., Israeli, A., Gamrasni, D.: Algorithmically-Guided Postharvest by Experimental Combinatorial Optimization. In: Proceedings of the Genetic and Evolutionary Computation Conference Companion, GECCO-2022, New York, NY, USA, ACM Press (2022) 2027&ndash;2035 <a href="https://doi.org/10.1145/3520304.3533976" target="_new">dl/acm</a> </li>
 <li> Kocaman, V., Shir, O.M., B&auml;ck, T.: The Unreasonable Effectiveness of the Final Batch Normalization Layer. In: Proceedings of the 16th International Symposium on Visual Computing, ISVC'21 (2021) <a href="https://doi.org/10.1007/978-3-030-90436-4_7" target="_new">doi</a> </li>
 <li> Kononova, A.V., Shir, O.M., Tukker, T., Frisco, P., Zeng, S., B&auml;ck, T.: Locating the local minima in lens design with machine learning. In: Proceedings of SPIE 11814, Current Developments in Lens Design and Optical Engineering XXII, 1181402 (1 August 2021) <a href="http://dx.doi.org/10.1117/12.2593199" target="_new">doi</a> </li> 
