--- a/materials.html
+++ b/materials.html
@@ -24,7 +24,7 @@
         <div id="header"><div id="header-content">	
 
             		<h1 id="logo"><a href="index.html" title=""><span class="gray">Ofer M. Shir </a></h1>	
-		<h2 id="slogan">Associate Professor, Computer Science Department, Tel-Hai College</h2>		
+		<h2 id="slogan">Associate Professor of Computer Science, Tel-Hai College and Migal Institute</h2>		
 		
 		<!-- Menu Tabs -->
 		<ul>
@@ -78,8 +78,9 @@
      </ul>
             <h1>Links</h1>
                 <ul>
-				<li> <a href="https://emo2023.liacs.leidenuniv.nl/" target="_new">EMO 2023: Evolutionary Multi-Criterion Optimization</a> ,Leiden University, March 2023; <a href="https://emo2023.liacs.leidenuniv.nl/tutorials/" target="_new">Call for Tutorials</a></li>
-				<li> <a href="https://gecco-2022.sigevo.org/HomePage" target="_new">GECCO 2022: The Genetic and Evolutionary Computation Conference</a> ,Boston MA, USA, July 2022; <a href="https://gecco-2022.sigevo.org/Tracks#ENUM%20-%20Evolutionary%20Numerical%20Optimization" target="_new">ENUM Track</a>; <a href="https://gecco-2022.sigevo.org/Workshops#QuantOpt" target="_new">Quantum Optimization Workshop</a></li>
+				<li> <a href="https://gecco-2023.sigevo.org/HomePage" target="_new">GECCO 2023: The Genetic and Evolutionary Computation Conference</a> ,Lisbon, Portugal, July 2023; <a href="https://gecco-2023.sigevo.org/Tracks#ENUM%20-%20Evolutionary%20Numerical%20Optimization" target="_new">ENUM Track</a></li>
+				<li> <a href="https://emo2023.liacs.leidenuniv.nl/" target="_new">EMO 2023: Evolutionary Multi-Criterion Optimization</a> ,Leiden University, March 2023.</li>
+				<li> <a href="https://gecco-2022.sigevo.org/HomePage" target="_new">GECCO 2022: The Genetic and Evolutionary Computation Conference</a> ,Boston MA, USA, July 2022; <a href="https://gecco-2022.sigevo.org/Workshops#QuantOpt" target="_new">Quantum Optimization Workshop</a></li>
 				<li> <a href="https://ppsn2020.liacs.leidenuniv.nl/" target="_new">PPSN 2020: 16th Int'l Conference on Parallel Problem Solving from Nature</a> ,Leiden University, September 2020; <a href="PPSN2020-flyer.pdf" target="_new">CFP flyer</a></li>
 				<li> IOHprofiler: Iterative Optimization Heuristics Profiler: <a href="http://iohprofiler.liacs.nl/" target="_new"> web tool</a>, <a href="https://github.com/IOHprofiler" target="_new"> GitHub</a>, <a href="IOHprofiler-flyer.pdf" target="_new">flyer</a> </li>
 		<li> <a href="http://www.dagstuhl.de/17191" target="_new">Dagstuhl Seminar on Theory of Randomized Optimization Heuristics</a> (17191, May 2017)</li>
