--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<div id="header"><div id="header-content">	
 		
 		<h1 id="logo"><a href="index.html" title=""><span class="gray">Ofer M. Shir</span></a></h1>	
-		<h2 id="slogan">Associate Professor, Computer Science Department, Tel-Hai College</h2>		
+		<h2 id="slogan">Associate Professor of Computer Science, Tel-Hai College and Migal Institute</h2>		
 		
 		<!-- Menu Tabs -->
 		<ul>
@@ -54,7 +54,7 @@
             <h1> contact details</h1>
             <ul>					
                 <li><label>electronic mail: </label><a href= "mailto:ofersh@telhai.ac.il">ofersh@telhai.ac.il </a></li>
-                <li><label>physical address:</label> Computer Science Dept., Room 304 Bld. 7, Western Campus, Tel-Hai College, Upper Galilee 1220800, ISRAEL</li>							
+                <li><label>physical address:</label> Math Faculty, Amado Mathematics Building, Room 810, Technion-IIT, Haifa,  ISRAEL</li>							
 				</ul>	    
             </div>
 							
@@ -65,12 +65,13 @@
 	                <p>I am interested in learning and optimization questions related to systems within the Natural Sciences. 
 Specifically, my fields of interest encompass Statistical Learning within Optimization and Deep Learning in Practice, Self-Supervised Learning, Algorithmically-Guided Experimentation, Combinatorial Optimization and Benchmarking (White/Gray/Black-Box), Quantum Optimization and Quantum Machine Learning. <br><br>
             <b>Currently:</b> <br>
-            Head, <strong><a href="https://english.telhai.ac.il/" target="_new">Computer Science Department, Tel-Hai College</a></strong>.<br>
+            Visiting Associate Professor, <strong><a href="https://web.math.technion.ac.il/site/" target="_new">Faculty of Mathematics, Technion - Israel Institute of Technology</a></strong>.<br>
             Principal Investigator, Computational Intelligence Group, <strong><a href="https://www.migal.org.il/en/computational-intelligence" target="_new">Migal-The Galilee Research Institute</a></strong>.
                         <br><br>
 		<b> Previously: </b>
 <ul>
-        <li> <span style="font-family:'Arial','sans-serif'; font-size: 10px">Senior Lecturer, <strong><a href="https://english.telhai.ac.il/" target="_new">Computer Science Department, Tel-Hai College</a></strong>.</span></li>
+        <li> <span style="font-family:'Arial','sans-serif'; font-size: 10px">Head, <strong><a href="https://english.telhai.ac.il/" target="_new">Computer Science Department, Tel-Hai College</a></strong>.</span></li>
+		<li> <span style="font-family:'Arial','sans-serif'; font-size: 10px">Senior Lecturer, <strong><a href="https://english.telhai.ac.il/" target="_new">Computer Science Department, Tel-Hai College</a></strong>.</span></li>
 	<li> <span style="font-family:'Arial','sans-serif'; font-size: 10px">Research Scientist, <strong><a href="https://www.research.ibm.com/" target="_new">IBM-Research</a></strong>.</span></li>
         <li> <span style="font-family:'Arial','sans-serif'; font-size: 10px">Postdoctoral Research Associate, <strong><a href="https://www.princeton.edu/" target="_new">Princeton University</a></strong>. Host: <a href="https://www.princeton.edu/chemistry/rabitz/" target="_new">Hersch Rabitz</a>.</span></li>
         <li> <span style="font-family:'Arial','sans-serif'; font-size: 10px">MSc and PhD in Computer Science, <strong><a href="https://www.leiden.edu/" target="_new">Leiden University</a></strong>. Advisors: <a href="https://natcomp.liacs.nl/" target="_new">Thomas B&auml;ck</a> and <a href="https://staff.mbi-berlin.de/vrakking/" target="_new">Marc Vrakking</a>.</span></li>
