--- a/materials.html
+++ b/materials.html
@@ -78,18 +78,18 @@
      </ul>
             <h1>Links</h1>
                 <ul>
-				<li> <a href="https://gecco-2023.sigevo.org/HomePage" target="_new">GECCO 2023: The Genetic and Evolutionary Computation Conference</a> ,Lisbon, Portugal, July 2023; <a href="https://gecco-2023.sigevo.org/Tracks#ENUM%20-%20Evolutionary%20Numerical%20Optimization" target="_new">ENUM Track</a></li>
+				<li> <a href="https://gecco-2023.sigevo.org/Workshops#QuantOpt" target="_new">GECCO 2023: The Genetic and Evolutionary Computation Conference</a>, Lisbon, Portugal, July 2023; <a href="https://sites.google.com/view/quantopt2023" target="_new">Quantum Optimization Workshop</a></li>
+				<li> <a href="https://gecco-2023.sigevo.org/HomePage" target="_new">GECCO 2023: The Genetic and Evolutionary Computation Conference</a>, Lisbon, Portugal, July 2023; <a href="https://gecco-2023.sigevo.org/Tracks#ENUM%20-%20Evolutionary%20Numerical%20Optimization" target="_new">ENUM Track</a></li>
 				<li> <a href="https://emo2023.liacs.leidenuniv.nl/" target="_new">EMO 2023: Evolutionary Multi-Criterion Optimization</a> ,Leiden University, March 2023.</li>
-				<li> <a href="https://gecco-2022.sigevo.org/HomePage" target="_new">GECCO 2022: The Genetic and Evolutionary Computation Conference</a> ,Boston MA, USA, July 2022; <a href="https://gecco-2022.sigevo.org/Workshops#QuantOpt" target="_new">Quantum Optimization Workshop</a></li>
-				<li> <a href="https://ppsn2020.liacs.leidenuniv.nl/" target="_new">PPSN 2020: 16th Int'l Conference on Parallel Problem Solving from Nature</a> ,Leiden University, September 2020; <a href="PPSN2020-flyer.pdf" target="_new">CFP flyer</a></li>
 				<li> IOHprofiler: Iterative Optimization Heuristics Profiler: <a href="http://iohprofiler.liacs.nl/" target="_new"> web tool</a>, <a href="https://github.com/IOHprofiler" target="_new"> GitHub</a>, <a href="IOHprofiler-flyer.pdf" target="_new">flyer</a> </li>
-		<li> <a href="http://www.dagstuhl.de/17191" target="_new">Dagstuhl Seminar on Theory of Randomized Optimization Heuristics</a> (17191, May 2017)</li>
-		<li> <a href="http://imappnio.dcs.aber.ac.uk/" target="_new">COST Action 15140: Improving Applicability of Nature-Inspired Optimisation by Joining Theory and Practice (ImAppNIO)</a> (MC Member IL; WG 3)</li>
+				<li> <a href="https://www.dagstuhl.de/19431" target="_new">Dagstuhl Seminar on Theory of Randomized Optimization Heuristics</a> (19431, October 2019)</li>
+		<li> <a href="https://www.dagstuhl.de/17191" target="_new">Dagstuhl Seminar on Theory of Randomized Optimization Heuristics</a> (17191, May 2017)</li>
+		<li> <a href="https://imappnio.dcs.aber.ac.uk/" target="_new">COST Action 15140: Improving Applicability of Nature-Inspired Optimisation by Joining Theory and Practice (ImAppNIO)</a> (MC Member IL; WG 3)</li>
 		<li> <a href="./NichingES/" target="_new">Niching in Evolution Strategies: An Introduction</a> (old page summarizing doctoral work on multimodal optimization)</li>
-			  <li> <a href="http://www.liacs.nl/" target="_new"> Leiden Institute of Advanced Computer Science (LIACS)</a></li>
+			  <li> <a href="https://liacs.leidenuniv.nl/" target="_new"> Leiden Institute of Advanced Computer Science (LIACS)</a></li>
               <li> <a href="https://www.universiteitleiden.nl/en/staffmembers/thomas-back" target="_new">Natural Computing Group at LIACS</a> (PhD Advisor I: Prof. Thomas B&auml;ck)</li>
-			  <li> <a href="http://www.amolf.nl/" target="_new">AMOLF Amsterdam</a> (PhD Advisor II: Prof. Marc Vrakking)</li>
-              <li> <a href="https://www.princeton.edu/chemistry/rabitz/" target="_new">Rabitz Group, Princeton University</a> (Postdoc Host: Prof. Herschel Rabitz)</li>
+			  <li> <a href="https://www.amolf.nl/" target="_new">AMOLF Amsterdam</a> (PhD Advisor II: Prof. Marc Vrakking)</li>
+              <li> <a href="https://chemistry.princeton.edu/faculty/herschel-rabitz/" target="_new">Rabitz Group, Princeton University</a> (Postdoc Host: Prof. Herschel Rabitz)</li>
       </ul>
 		  
                   		</div>
@@ -106,7 +106,7 @@
 
             <div class="col float-left">
             <p>
-            &copy; copyright 2022 <strong>Ofer Shir</strong><br /> 
+            &copy; copyright 2023 <strong>Ofer Shir</strong><br /> 
             Design by: <a href="index.html"><strong>styleshout</strong></a> &nbsp; &nbsp;
             Valid <a href="http://jigsaw.w3.org/css-validator/check/referer"><strong>CSS</strong></a>  
             </p>
