--- a/publications.html
+++ b/publications.html
@@ -84,7 +84,7 @@ Comb Chem High Throughput Screen <strong>19</strong>(1) (2016) 4&mdash;13   </li
 				<h1>Peer-Reviewed Conference Proceedings</h1>
                 <ol start="29" type="1">
 				<li> Kocaman, V., Shir, O.M., B&auml;ck, T., Belbachir, A.N.: Saliency Can Be All You Need
-In Contrastive Self-Supervised Learning. In: Proceedings of the 17th International Symposium on Visual Computing, ISVC'22 (2022) <a href="https://link.springer.com/book/9783031207129" target="_new">LNCS volume 13598: to be released</a> </li>
+In Contrastive Self-Supervised Learning. In: Proceedings of the 17th International Symposium on Visual Computing, ISVC'22 (2022). Lecture Notes in Computer Science, vol 13599. Springer, Cham <a href="https://doi.org/10.1007/978-3-031-20716-7_10" target="_new">doi</a> </li>
 <li> Shir, O.M., Yazmir, B., Israeli, A., Gamrasni, D.: Algorithmically-Guided Postharvest by Experimental Combinatorial Optimization. In: Proceedings of the Genetic and Evolutionary Computation Conference Companion, GECCO-2022, New York, NY, USA, ACM Press (2022) 2027&ndash;2035 <a href="https://doi.org/10.1145/3520304.3533976" target="_new">dl/acm</a> </li>
 <li> Kocaman, V., Shir, O.M., B&auml;ck, T.: The Unreasonable Effectiveness of the Final Batch Normalization Layer. In: Proceedings of the 16th International Symposium on Visual Computing, ISVC'21 (2021) <a href="https://doi.org/10.1007/978-3-030-90436-4_7" target="_new">doi</a> </li>
 <li> Kononova, A.V., Shir, O.M., Tukker, T., Frisco, P., Zeng, S., B&auml;ck, T.: Locating the local minima in lens design with machine learning. In: Proceedings of SPIE 11814, Current Developments in Lens Design and Optical Engineering XXII, 1181402 (1 August 2021) <a href="http://dx.doi.org/10.1117/12.2593199" target="_new">doi</a> </li> 
@@ -168,7 +168,7 @@ In Contrastive Self-Supervised Learning. In: Proceedings of the 17th Internation
 
             <div class="col float-left">
             <p>
-            &copy; copyright 2022 <strong>Ofer Shir</strong><br /> 
+            &copy; copyright 2023 <strong>Ofer Shir</strong><br /> 
             Design by: <a href="index.html"><strong>styleshout</strong></a> &nbsp; &nbsp;
             Valid <a href="http://jigsaw.w3.org/css-validator/check/referer"><strong>CSS</strong></a>  
             </p>
