--- a/publications.html
+++ b/publications.html
@@ -83,6 +83,7 @@ Comb Chem High Throughput Screen <strong>19</strong>(1) (2016) 4&mdash;13   </li
             </ol>
 				<h1>Peer-Reviewed Conference Proceedings</h1>
                 <ol start="29" type="1">
+				<li> Shir, O.M., Emmerich, M.: On the Behavior of the Mixed-Integer SMS-EMOA on Box-Constrained Quadratic Bi-Objective Models. TO APPEAR In: Proceedings of the Genetic and Evolutionary Computation Conference Companion, GECCO-2023, New York, NY, USA, ACM Press (2023) </li>
 				<li> Kocaman, V., Shir, O.M., B&auml;ck, T., Belbachir, A.N.: Saliency Can Be All You Need
 In Contrastive Self-Supervised Learning. In: Proceedings of the 17th International Symposium on Visual Computing, ISVC'22 (2022). Lecture Notes in Computer Science, vol 13599. Springer, Cham <a href="https://doi.org/10.1007/978-3-031-20716-7_10" target="_new">doi</a> </li>
 <li> Shir, O.M., Yazmir, B., Israeli, A., Gamrasni, D.: Algorithmically-Guided Postharvest by Experimental Combinatorial Optimization. In: Proceedings of the Genetic and Evolutionary Computation Conference Companion, GECCO-2022, New York, NY, USA, ACM Press (2022) 2027&ndash;2035 <a href="https://doi.org/10.1145/3520304.3533976" target="_new">dl/acm</a> </li>
