--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h1> contact details</h1>
             <ul>					
                 <li><label>electronic mail: </label><a href= "mailto:ofersh@telhai.ac.il">ofersh@telhai.ac.il </a></li>
-                <li><label>physical address:</label> Math Faculty, Amado Mathematics Building, Room 810, Technion-IIT, Haifa,  ISRAEL</li>							
+                <li><label>physical address:</label> The New Laboratories Building (6), Tel-Hai Eastern Campus, Room B02, Upper Galilee,  ISRAEL</li>							
 				</ul>	    
             </div>
 							
@@ -65,11 +65,12 @@
 	                <p>I am interested in learning and optimization questions related to systems within the Natural Sciences. 
 Specifically, my fields of interest encompass Statistical Learning within Optimization and Deep Learning in Practice, Self-Supervised Learning, Algorithmically-Guided Experimentation, Combinatorial Optimization and Benchmarking (White/Gray/Black-Box), Quantum Optimization and Quantum Machine Learning. <br><br>
             <b>Currently:</b> <br>
-            Visiting Associate Professor, <strong><a href="https://web.math.technion.ac.il/site/" target="_new">Faculty of Mathematics, Technion - Israel Institute of Technology</a></strong>.<br>
+            Associate Professor of Computer Science, <strong><a href="https://english.telhai.ac.il/" target="_new">Computer Science Department, Tel-Hai College</a></strong>.<br>
             Principal Investigator, Computational Intelligence Group, <strong><a href="https://www.migal.org.il/en/computational-intelligence" target="_new">Migal-The Galilee Research Institute</a></strong>.
                         <br><br>
 		<b> Previously: </b>
 <ul>
+		<li> <span style="font-family:'Arial','sans-serif'; font-size: 10px">Visiting Associate Professor, <strong><a href="https://web.math.technion.ac.il/site/" target="_new">Faculty of Mathematics, Technion - Israel Institute of Technology</a></strong>.</span> </li>
         <li> <span style="font-family:'Arial','sans-serif'; font-size: 10px">Head, <strong><a href="https://english.telhai.ac.il/" target="_new">Computer Science Department, Tel-Hai College</a></strong>.</span></li>
 		<li> <span style="font-family:'Arial','sans-serif'; font-size: 10px">Senior Lecturer, <strong><a href="https://english.telhai.ac.il/" target="_new">Computer Science Department, Tel-Hai College</a></strong>.</span></li>
 	<li> <span style="font-family:'Arial','sans-serif'; font-size: 10px">Research Scientist, <strong><a href="https://www.research.ibm.com/" target="_new">IBM-Research</a></strong>.</span></li>
