--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Specifically, my fields of interest encompass Statistical Learning within Optimi
                         <br><br>
 		<b> Previously: </b>
 <ul>
-		<li> <span style="font-family:'Arial','sans-serif'; font-size: 10px">Visiting Associate Professor, <strong><a href="https://web.math.technion.ac.il/site/" target="_new">Faculty of Mathematics, Technion - Israel Institute of Technology</a></strong>.</span> </li>
+		<li> <span style="font-family:'Arial','sans-serif'; font-size: 10px">Visiting Associate Professor, <strong><a href="https://math.technion.ac.il/" target="_new">Faculty of Mathematics, Technion - Israel Institute of Technology</a></strong>.</span> </li>
         <li> <span style="font-family:'Arial','sans-serif'; font-size: 10px">Head, <strong><a href="https://english.telhai.ac.il/" target="_new">Computer Science Department, Tel-Hai College</a></strong>.</span></li>
 		<li> <span style="font-family:'Arial','sans-serif'; font-size: 10px">Senior Lecturer, <strong><a href="https://english.telhai.ac.il/" target="_new">Computer Science Department, Tel-Hai College</a></strong>.</span></li>
 	<li> <span style="font-family:'Arial','sans-serif'; font-size: 10px">Research Scientist, <strong><a href="https://www.research.ibm.com/" target="_new">IBM-Research</a></strong>.</span></li>
