--- a/materials.html
+++ b/materials.html
@@ -60,7 +60,7 @@
                
                     <h1>Research Materials and Presentations </h1>
         <ul>
-		<li> Perspective: Towards an Independent Artificial Scientist <a href="ShirOM-May2023___Perspective___Towards_Independent_AI_Guided_Scientific_Experimental_Research.pdf" target="_new">preprint</a> (May 2023)</li>
+		<!--li> Perspective: Towards an Independent Artificial Scientist <a href="ShirOM-May2023___Perspective___Towards_Independent_AI_Guided_Scientific_Experimental_Research.pdf" target="_new">preprint</a> (May 2023)</li-->
 		<li> Lessons Learned Report: Super-Resolution for Detection Tasks in Engineering Problem-Solving <a href="https://arxiv.org/abs/2303.00364" target="_new">arXiv</a> </li>
 		<li> GWANN: Implementing deep learning in genome wide association studies (bioRxiv preprint with Nimrod Ashkenazy, Martin Feder, and Sariel Hubner) <a href="https://www.biorxiv.org/content/10.1101/2022.06.01.494275v1?rss=1" target="_new">bioRxiv</a> </li>
 		<li> Introductory Mathematical Programming for EC (GECCO'22 tutorial; Boston MA, USA, July 2022) <a href="IntroMathProg4EC_gecco2022_ShirOM.pdf" target="_new">pdf</a></li>
