--- a/materials.html
+++ b/materials.html
@@ -60,7 +60,8 @@
                
                     <h1>Research Materials and Presentations </h1>
         <ul>
-		<!--li> Perspective: Towards an Independent Artificial Scientist <a href="ShirOM-May2023___Perspective___Towards_Independent_AI_Guided_Scientific_Experimental_Research.pdf" target="_new">preprint</a> (May 2023)</li-->
+		<li> Mind the Gap (Dagstuhl Seminar on Challenges in Benchmarking Optimization Heuristics, 23251, June 2023) <a href="MindTheGap_presentationDagstuhl23251_ShirOM.pdf" target="_new">pdf</a></li>
+		<li> Perspective: Towards an Independent Artificial Scientist <a href="ShirOM-May2023___Perspective___Towards_Independent_AI_Guided_Scientific_Experimental_Research.pdf" target="_new">preprint</a> (May 2023)</li>
 		<li> Lessons Learned Report: Super-Resolution for Detection Tasks in Engineering Problem-Solving <a href="https://arxiv.org/abs/2303.00364" target="_new">arXiv</a> </li>
 		<li> GWANN: Implementing deep learning in genome wide association studies (bioRxiv preprint with Nimrod Ashkenazy, Martin Feder, and Sariel Hubner) <a href="https://www.biorxiv.org/content/10.1101/2022.06.01.494275v1?rss=1" target="_new">bioRxiv</a> </li>
 		<li> Introductory Mathematical Programming for EC (GECCO'22 tutorial; Boston MA, USA, July 2022) <a href="IntroMathProg4EC_gecco2022_ShirOM.pdf" target="_new">pdf</a></li>
@@ -70,6 +71,7 @@
 		<li> Ido Dan, Developing models for soil texture classification from ancillary data using machine learning. MSc Thesis Tel-Hai College (joint supervision with Iggy Litaor, 2022): <a href="IdoDan_MScDissertation_web.pdf" target="_new">dissertation for download</a></li>
 		<li> Assaf Israeli, Multiobjective Optimization of Soil Sampling Design Using Information Metrics. MSc Thesis Tel-Hai College (joint supervision with Iggy Litaor, 2020): <a href="AssafIsraeli_MScDissertation_web.pdf" target="_new">dissertation for download</a></li>
 		<li> Chen Erlich, Experimental Combinatorial Optimization of Phycobiliproteins' Expression in E.coli. MSc Thesis Tel-Hai College (joint supervision with Dror Noy, 2019): <a href="ChenErlich_MScDissertation_web.pdf" target="_new">dissertation for download</a></li>
+		<li> Compiling a Benchmarking Test-Suite for Combinatorial Black-Box Optimization: A Position Presentation (GECCO'18, July 2018) <a href="CombinatorialBenchmarking_PresentationGECCO2018_ShirOM.pdf" target="_new">pdf</a></li>
 	<li> Fundamentals of ESs' Statistical Learning (Dagstuhl Seminar on Theory of Randomized Optimization Heuristics, 17191, May 2017) <a href="dagstuhl17191_ShirOM.pdf" target="_new">pdf</a></li>
 	<li> On the Covariance-Hessian Relation in Evolution Strategies (arXiv preprint with Amir Yehudayoff) <a href="https://arxiv.org/abs/1806.03674" target="_new">pdf</a></li>
 	<li> On the Statistical Learning Ability of Evolution Strategies (Foundations of Genetic Algorithms Workshop FOGA-XIV, January 2017) <a href="Shir-Yehudayoff_FOGA2017copenhagen15012017.pdf" target="_new">pdf</a></li>
@@ -82,6 +84,7 @@
                 <ul>
 				<li> <a href="https://gecco-2023.sigevo.org/Workshops#QuantOpt" target="_new">GECCO 2023: The Genetic and Evolutionary Computation Conference</a>, Lisbon, Portugal, July 2023; <a href="https://sites.google.com/view/quantopt2023" target="_new">Quantum Optimization Workshop</a></li>
 				<li> <a href="https://gecco-2023.sigevo.org/HomePage" target="_new">GECCO 2023: The Genetic and Evolutionary Computation Conference</a>, Lisbon, Portugal, July 2023; <a href="https://gecco-2023.sigevo.org/Tracks#ENUM%20-%20Evolutionary%20Numerical%20Optimization" target="_new">ENUM Track</a></li>
+				<li> <a href="https://www.dagstuhl.de/23251" target="_new">Dagstuhl Seminar on Challenges in Benchmarking Optimization Heuristics</a> (23251, June 2023)</li>
 				<li> <a href="https://emo2023.liacs.leidenuniv.nl/" target="_new">EMO 2023: Evolutionary Multi-Criterion Optimization</a> ,Leiden University, March 2023.</li>
 				<li> IOHprofiler: Iterative Optimization Heuristics Profiler: <a href="http://iohprofiler.liacs.nl/" target="_new"> web tool</a>, <a href="https://github.com/IOHprofiler" target="_new"> GitHub</a>, <a href="IOHprofiler-flyer.pdf" target="_new">flyer</a> </li>
 				<li> <a href="https://www.dagstuhl.de/19431" target="_new">Dagstuhl Seminar on Theory of Randomized Optimization Heuristics</a> (19431, October 2019)</li>
