--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@ Specifically, my fields of interest encompass Statistical Learning within Optimi
 	<b> Recent meetings</b>:
 	<br><br>
 	    <div id="content-wrap"><div id="content">
-		<p> GECCO'22 Boston MA, USA, July 2022 &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp;&emsp; &emsp; GECCO'21 VIRTUAL Lille, France, July 2021 <br>	
-                <a href="./images/gecco2022.jpg" target="_new"><img src="./images/gecco2022.jpg" width=281px alt="GECCO-2022"></a>
-				<a href="./images/gecco2021.png" target="_new"><img src="./images/gecco2021.png" width=281px alt="GECCO-2021"></a>
-                </p>
+		<p> Dagstuhl 23251 Seminar, June 2023 &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp;&emsp; &emsp; GECCO'22 Boston MA, USA, July 2022 <br>	
+                <a href="./images/23251.03.s.JPG" target="_new"><img src="./images/23251.03.s.JPG" width=281px alt="GECCO-2021"></a>
+				<a href="./images/gecco2022.jpg" target="_new"><img src="./images/gecco2022.jpg" width=281px alt="GECCO-2022"></a>
+				</p>
 		<!--p> Dagstuhl 17191 Seminar, May 2017 &emsp; &emsp; &emsp; &emsp; &emsp; &emsp;&emsp; &emsp; FOGA, January 2017 <br> 
 		<a href="./images/17191.jpg" target="_new"><img src="./images/17191_small.gif" width=226px alt="Dagstuhl-17191"></a>
                 <a href="./images/groupFOGA2017.jpg" target="_new"><img src="./images/groupFOGA2017_small.gif" width=290px alt="FOGA-2017"></a>
