--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ Specifically, my fields of interest encompass Statistical Learning within Optimi
 	<br><br>
 	    <div id="content-wrap"><div id="content">
 		<p> Dagstuhl 23251 Seminar, June 2023 &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp;&emsp; &emsp; GECCO'22 Boston MA, USA, July 2022 <br>	
-                <a href="./images/23251.03.s.jpg" target="_new"><img src="./images/23251.03.s.JPG" width=281px alt="Dagstuhl-23251"></a>
+                <a href="./images/23251.jpg" target="_new"><img src="./images/23251.jpg" width=281px alt="Dagstuhl-23251"></a>
 				<a href="./images/gecco2022.jpg" target="_new"><img src="./images/gecco2022.jpg" width=281px alt="GECCO-2022"></a>
 				</p>
 		<!--p> Dagstuhl 17191 Seminar, May 2017 &emsp; &emsp; &emsp; &emsp; &emsp; &emsp;&emsp; &emsp; FOGA, January 2017 <br> 
