--- a/materials.html
+++ b/materials.html
@@ -60,6 +60,7 @@
                
                     <h1>Research Materials and Presentations </h1>
         <ul>
+		<li> On the Behavior of the Mixed-Integer SMS-EMOA (GECCO'23 AABOH workshop presentation; Lisbon, Portugal, July 2023) <a href="gecco2023_AABOH-ShirOM.pdf" target="_new">pdf</a></li>
 		<li> Mind the Gap (Dagstuhl Seminar on Challenges in Benchmarking Optimization Heuristics, 23251, June 2023) <a href="MindTheGap_presentationDagstuhl23251_ShirOM.pdf" target="_new">pdf</a></li>
 		<li> Perspective: Towards an Independent Artificial Scientist <a href="ShirOM-May2023___Perspective___Towards_Independent_AI_Guided_Scientific_Experimental_Research.pdf" target="_new">preprint</a> (May 2023)</li>
 		<li> Lessons Learned Report: Super-Resolution for Detection Tasks in Engineering Problem-Solving <a href="https://arxiv.org/abs/2303.00364" target="_new">arXiv</a> </li>
