--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 
 <meta name="Description" content="Ofer Shir, Computer Science, Tel-Hai College" />
-<meta name="Keywords" content="Computer Science, Natural Computing, Computational Intelligence" />
+<meta name="Keywords" content="Computer Science, Optimization and Learning, Computational Intelligence" />
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <meta name="Distribution" content="Global" />
 <meta name="Robots" content="index,follow" />
