--- a/materials.html
+++ b/materials.html
@@ -5,7 +5,7 @@
     <head>
 
 <meta name="Description" content="Ofer Shir, Computer Science, Tel-Hai College" />
-<meta name="Keywords" content="Computer Science, Natural Computing, Computational Intelligence" />
+<meta name="Keywords" content="Computer Science, Optimization and Learning, Computational Intelligence" />
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <meta name="Distribution" content="Global" />
 <meta name="Robots" content="index,follow" />
@@ -62,7 +62,7 @@
         <ul>
 		<li> On the Behavior of the Mixed-Integer SMS-EMOA (GECCO'23 AABOH workshop presentation; Lisbon, Portugal, July 2023) <a href="gecco2023_AABOH-ShirOM.pdf" target="_new">pdf</a></li>
 		<li> Mind the Gap (Dagstuhl Seminar on Challenges in Benchmarking Optimization Heuristics, 23251, June 2023) <a href="MindTheGap_presentationDagstuhl23251_ShirOM.pdf" target="_new">pdf</a></li>
-		<li> Perspective: Towards an Independent Artificial Scientist <a href="ShirOM-May2023___Perspective___Towards_Independent_AI_Guided_Scientific_Experimental_Research.pdf" target="_new">preprint</a> (May 2023)</li>
+		<li> Perspective: Towards AI Research Agents in the Experimental Sciences <a href="ShirOM-May2023___Perspective___Towards_Independent_AI_Guided_Scientific_Experimental_Research.pdf" target="_new">preprint</a> (July 2023)</li>
 		<li> Lessons Learned Report: Super-Resolution for Detection Tasks in Engineering Problem-Solving <a href="https://arxiv.org/abs/2303.00364" target="_new">arXiv</a> </li>
 		<li> GWANN: Implementing deep learning in genome wide association studies (bioRxiv preprint with Nimrod Ashkenazy, Martin Feder, and Sariel Hubner) <a href="https://www.biorxiv.org/content/10.1101/2022.06.01.494275v1?rss=1" target="_new">bioRxiv</a> </li>
 		<li> Introductory Mathematical Programming for EC (GECCO'22 tutorial; Boston MA, USA, July 2022) <a href="IntroMathProg4EC_gecco2022_ShirOM.pdf" target="_new">pdf</a></li>
